# Z-Renderer

./: CMakeLists.txt  CMakePresets.json  fragment.frag  todo.md  vertex.vert
src/: Camera.cpp  Camera.h  Importer.cpp  Importer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
